# Maintainer-CoPilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER_BUILD_ROOT_CAUSE.md  DOCKER_BUILD_STATUS.md  POST_BUILD_STEPS.md  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_c0ffee_baseline.py  002_add_parent_columns.py
backend/app/: config.py
backend/app/api/: dependencies.py  exceptions.py  main.py
backend/app/api/routes/: auth.py  chat.py  classify.py  embed.py  health.py  memory.py  ner.py  rag.py  summarize.py  widgets.py
backend/app/domain/: classification.py  errors.py  issue.py  rag_chunk.py  tool_error.py
backend/app/infra/: minio.py  model_server_client.py  redaction.py  redis_client.py  tracing.py  vault.py
backend/app/infra/llm/: base.py  gemini.py  ollama.py
backend/app/ml/: __init__.py  classifier.py  ner.py  summarizer.py  train_classifier.py
backend/app/models/: __init__.py  base.py  rag_chunk.py
backend/app/rag/: chunking.py  citations.py  embeddings.py  ingest.py  reranker.py  retrieval.py  rewrite.py
backend/app/repositories/: base.py  models.py
backend/app/services/: chatbot.py  classification.py  memory.py  rag.py  widget.py
backend/app/tools/: classify_tool.py  ner_tool.py  rag_tool.py  summarize_tool.py  write_memory_tool.py
backend/eval/: eval_thresholds.yaml  run_classification_eval.py  run_rag_eval.py
backend/eval/classification/: golden_set.jsonl  run_eval.py  thresholds.yaml
backend/eval/rag/: ablation_results.md  build_golden_from_corpus.py  golden_set.jsonl  golden_set.jsonl.bak  last_results.json  run_eval.py  thresholds.yaml  wiki_golden_set.jsonl  wiki_golden_set_results.json
backend/model_server/: inference.py  main.py
backend/notebooks/: train_classifier_colab.ipynb
backend/prompts/: rag_query_rewrite.md  summarize.md  system_chatbot.md
backend/scripts/: ablate_rag.py  audit_labels.py  build_splits.py  fetch_issues.py  ingest_corpus.py  seed_vault.py  train_classifier.py  upload_corpus_to_minio.py  upload_model_to_minio.py
backend/tests/eval/: test_classification_thresholds.py  test_rag_thresholds.py
backend/tests/integration/: conftest.py  test_compose_boot.py  test_migrations.py  test_rag_endpoint.py  test_vault_refusal.py
backend/tests/unit/: test_classifier_loads.py  test_csp_frame_ancestors.py  test_exception_handling.py  test_label_mapping.py  test_long_term_memory_retrieval.py  test_rag_service.py  test_redaction.py  test_redaction_in_traces.py  test_settings.py  test_short_term_memory_ttl.py  test_smoke.py  test_tool_error.py  test_vault.py  test_widget_bundle_size.py  test_write_memory_audit_log.py
docker/: api.Dockerfile  docker-compose.override.yml  docker-compose.yml  host.Dockerfile  model_server.Dockerfile  streamlit.Dockerfile  vault-init.sh  widget.Dockerfile
docker/nginx/: host.conf  widget.conf
docs/: ARCH.md  DECISIONS.md  DEMO_GUIDE.md  EVALS.md  PLAN.md  RUNBOOK.md  SECURITY.md
docs/reports/: 2026-05-19-mon-step10-classifier-training.md  2026-05-19-mon-step10b-dl-workflow-to-colab.md  2026-05-19-mon-step5-fastapi-lifespan.md  2026-05-19-mon-step6-alembic-baseline.md  2026-05-19-mon-step8-redaction.md  2026-05-19-mon-step9-dataset-splits.md  2026-05-20-docker-stack-rebuild.md  2026-05-20-ml-training.md  2026-05-20-tue-classifiers-and-endpoints.md  2026-05-20-wed-complete.md  2026-05-20-wed-exception-handling.md  2026-05-20-wed-rag-service.md  2026-05-21-cascade-classifier-and-ragas.md  2026-05-21-critical-gaps.md  2026-05-21-eval-test-suites.md  2026-05-21-missing-tests.md  2026-05-21-plan-audit.md  2026-05-21-rag-ingest-and-ablation.md  2026-05-21-thu-full-stack-launch.md  2026-05-22-e2e-tests-cors-chat-sidebar.md  2026-05-22-enabled-tools-per-user-convs.md  2026-05-22-widget-auth-fix.md  2026-05-22-wiki-golden-set-eval.md  2026-05-23-reranker-move-eval-delta.md  MON-MANUAL-GATE-CHECKLIST.md  VAULT_INIT_FIX.md  report_done_steps.txt
docs/resources/: MONAI-labels.txt  commaai-openpilot-labels.txt
frontend/demo_host/: docker-entrypoint.sh
frontend/demo_host/allowed/: index.html
frontend/demo_host/disallowed/: index.html
frontend/streamlit_ui/: .dockerignore  app.py  pyproject.toml
frontend/streamlit_ui/.streamlit/: config.toml
frontend/streamlit_ui/lib/: api_client.py  auth.py  styles.py
frontend/streamlit_ui/pages/: 1_chat.py  2_admin_widgets.py  3_memory_inspector.py
frontend/streamlit_ui/tests/: test_smoke.py
frontend/widget/: index.html  package-lock.json  package.json  vite.config.ts
frontend/widget/public/: loader.js
frontend/widget/src/: App.tsx  Chat.tsx  api.ts  main.tsx  types.ts
ml/: .gitignore  pyproject.toml
ml/notebooks/: train_classifier_colab.ipynb  train_local.ipynb  train_pipeline.py
tests/e2e/: conftest.py  test_widget_allowed_host.py  test_widget_disallowed_host.py
