[project]
name = "maintainers-copilot-backend"
version = "0.1.0"
description = "Maintainer's Copilot backend — FastAPI service, model server, RAG, eval"
requires-python = ">=3.12,<3.13"
readme = "../README.md"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    # Runtime deps land as features are built (uv add ...).
    # MON Step 1 keeps this empty so the scaffold installs in seconds and
    # we add deps deliberately, with each commit, alongside the code that uses them.
    "httpx>=0.28.1",
    "hvac>=2.4.0",
    "pgvector>=0.4.2",
    "pydantic>=2.13.4",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]
train = [
    "torch>=2.12.0",
    "datasets>=3.4.0",
    "huggingface-hub>=0.26.6",
]
model-server = [
    "torch>=2.12.0",
    "transformers>=5.8.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # asserts are how pytest tests express expectations

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "eval: slow, golden-set evaluation tests (skipped by default; run with -m eval)",
    "integration: integration tests that require docker services",
]
addopts = "-ra --strict-markers -m 'not eval and not integration'"
